--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -6,10 +6,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Hackney Document Uploads">
-  <link rel="stylesheet" href="/css/styles.css" />
-  <link rel="stylesheet" href="/css/bootstrap.min.css" />
-  <link rel="shortcut icon" href="/img/favicon.png" type="image/png" />
-  <script type="text/javascript" src="/js/ga.js"></script>
+  <link rel="stylesheet" href="/assets/css/styles.css" />
+  <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
+  <link rel="shortcut icon" href="/assets/img/favicon.png" type="image/png" />
+  <script type="text/javascript" src="/assets/js/ga.js"></script>
 </head>
 
 <body>
