--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -8,8 +8,11 @@
   <meta name="description" content="Hackney Document Uploads">
   <link rel="stylesheet" href="/assets/css/styles.css" />
   <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="/assets/css/bootstrap-nav.min.css" />
   <link rel="shortcut icon" href="/assets/img/favicon.png" type="image/png" />
   <script type="text/javascript" src="/assets/js/ga.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="/assets/js/bootstrap.min.js"></script>
 </head>
 
 <body>
