Add archive feature (#2)

--- a/templates/readonlyDropbox.hbs
+++ b/templates/readonlyDropbox.hbs
@@ -29,6 +29,24 @@
     <strong>Submitted on:</strong>
     <p>{{dateFormat dropbox.submitted}}</p>
     {{#if isStaff }}
+    {{#if dropbox.archived}}
+    <strong>
+      <p data-testid="archive-status-test">Status: Archived </p>
+    </strong>
+    <form method="POST" action="/dropboxes/{{dropboxId}}/archive">
+      <input type="hidden" name="archiveStatus" value="" />
+      <button class="btn btn-light" data-testid="unarchive-button-test">Unarchive</button>
+    </form>
+    {{else}}
+    <strong>
+      <p data-testid="archive-status-test">Status: To review</p>
+    </strong>
+    <form method="POST" action="/dropboxes/{{dropboxId}}/archive">
+      <input type="hidden" name="archiveStatus" value="true" />
+      <button class="btn btn-light" data-testid="archive-button-test">Move to archive</button>
+    </form>
+    {{/if}}
+
     {{else}}
     <a href="/restart" class="btn btn-block btn-lg btn-primary" role="button" id="startAgain">Start Again</a>
     {{/if }}
