Use dropdown for document description

--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Hackney Document Uploads</title>
+  <title>Hackney Education Uploads</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Hackney Document Uploads">
@@ -10,17 +10,16 @@
   <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
   <link rel="stylesheet" href="/assets/css/bootstrap-nav.min.css" />
   <link rel="shortcut icon" href="/assets/img/favicon.png" type="image/png" />
-  <script type="text/javascript" src="/assets/js/ga.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="/assets/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="/assets/js/ga.js"></script>
 </head>
 
 <body>
   {{> logo }}
   <div class="banner">
     <span class="banner-tag">ALPHA</span>
-    This is a new service. Tell us what you think by completing <a href="https://forms.gle/YTToeg4eUnGVxyQt6">this
-      feedback form</a>.
+    This is a new service. Tell us what you think by completing <a href="#">this feedback form</a>.
   </div>
   <div class="container">
     <div class="col">
