--- a/templates/createDropbox.hbs
+++ b/templates/createDropbox.hbs
@@ -58,48 +58,30 @@
   </p>
   <form action="" method="POST" onsubmit="return validateIdentification();">
     <div class="form-group">
-      <label for="customerName">Your name</label>
-      <input type="text" class="form-control" id="customerName" name="customerName" value="{{ dropbox.customer.name }}"
+      <label for="firstName">Child’s First Name</label>
+      <input type="text" class="form-control" id="firstName" name="firstName" value="{{ dropbox.customer.firstName }}"
         required />
     </div>
     <div class="form-group">
-      <label for="customerEmail">Email</label>
-      <input type="text" class="form-control" id="customerEmail" name="customerEmail"
-        value="{{ dropbox.customer.email }}" />
+      <label for="lastName">Child’s Last Name</label>
+      <input type="text" class="form-control" id="lastName" name="lastName" value="{{ dropbox.customer.lastName }}"
+        required />
+    </div>
+
+    <div class="form-group">
+      <label for="dob">Date of birth</label>
+      <input type="date" class="form-control" id="dob" name="dob" value="{{ dropbox.customer.dob }}" required />
     </div>
     <div class="form-group">
-      <label for="customerPhone">Phone number</label>
-      <input type="text" class="form-control" id="customerPhone" name="customerPhone"
-        value="{{ dropbox.customer.phone }}" />
+      <label for="parentsEmail">Parent's email</label>
+      <input type="text" class="form-control" id="parentsEmail" name="parentsEmail"
+        value="{{ dropbox.customer.parentsEmail }}" required />
     </div>
-    <p class='top-border'>
-      Please fill out one of the following so we can identify you.
-    </p>
-    <div class="identifiable-fields">
-      <div class="form-group">
-        <label for="customerDob">Date of birth</label>
-        <input type="date" class="form-control" id="customerDob" name="customerDob"
-          value="{{ dropbox.customer.dob }}" />
-      </div>
-      <div class="form-group">
-        <label for="customerReference">Benefits claim reference number</label>
-        <input type="text" class="form-control" id="customerReference" name="customerReference"
-          value="{{ dropbox.customer.reference }}" />
-      </div>
-      <div class="form-group">
-        <label for="customerNationalInsurance">National insurance number</label>
-        <input type="text" class="form-control" id="customerNationalInsurance" name="customerNationalInsurance"
-          value="{{ dropbox.customer.nationalInsurance }}" />
-      </div>
-      <div class="form-group has-error visually-hidden" id='identifiable-fields-warning'>
-        <p>Please fill out one of the above</p>
-      </div>
-    </div>
+
     <div class="form-group top-border">
-      <label for="description">Why are you uploading these documents?</label>
+      <label for="description">Notes</label>
       <textarea class="form-control" id="description" name="description" rows="3"
-        placeholder='Give a reason for uploading the documents, eg. "to apply for change of circumstance"'
-        required>{{ dropbox.description }}</textarea>
+        placeholder='Give a reason for uploading the documents, eg. "to apply for change of circumstance"'>{{ dropbox.description }}</textarea>
     </div>
     <div class="form-group">
       <button type="submit" id="submitDropbox" class="btn btn-block btn-lg btn-primary">Submit Documents</button>
