--- a/templates/readonlyDropbox.hbs
+++ b/templates/readonlyDropbox.hbs
@@ -2,16 +2,12 @@
 {{#if isStaff }}
 <a href="/dropboxes" data-testid="dropbox-list-return-link">
   << Back to all dropboxes</a> {{/if }} <div id="dropboxContents" data-testid="dropbox-details">
-    <strong>Name:</strong>
-    <p>{{ dropbox.customer.name }}</p>
-    <strong>Email:</strong>
-    <p data-testid="email-value">{{ dropbox.customer.email }}</p>
+    <strong>Child's name:</strong>
+    <p>{{ dropbox.customer.firstName }} {{ dropbox.customer.lastName }}</p>
     <strong>Date of Birth:</strong>
     <p data-testid="dob-value">{{ dropbox.customer.dob }}</p>
-    <strong>Benefits claim reference number:</strong>
-    <p data-testid="reference-number-value">{{ dropbox.customer.reference }}</p>
-    <strong>National Insurance number:</strong>
-    <p data-testid="national-insurance-value">{{ dropbox.customer.nationalInsurance }}</p>
+    <strong>Parent's email</strong>
+    <p data-testid="parents-email-value">{{ dropbox.customer.parentsEmail }}</p>
     <strong>Description:</strong>
     <p>{{ dropbox.description }}</p>
     {{#if dropbox.hasUploads }}
