--- a/templates/readonlyDropbox.hbs
+++ b/templates/readonlyDropbox.hbs
@@ -6,9 +6,9 @@
     <p>{{ dropbox.customer.firstName }} {{ dropbox.customer.lastName }}</p>
     <strong>Date of Birth:</strong>
     <p data-testid="dob-value">{{ dropbox.customer.dob }}</p>
-    <strong>Parent's email</strong>
+    <strong>Parent's email:</strong>
     <p data-testid="parents-email-value">{{ dropbox.customer.parentsEmail }}</p>
-    <strong>Description:</strong>
+    <strong>Notes:</strong>
     <p>{{ dropbox.description }}</p>
     {{#if dropbox.hasUploads }}
     <strong>Uploaded Documents:</strong>
