--- a/templates/staffDropboxList.hbs
+++ b/templates/staffDropboxList.hbs
@@ -3,15 +3,12 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th scope="col">Name</th>
+      <th scope="col">Child's Name</th>
       <th scope="col">Docs</th>
-      <th scope="col">Upload Reason</th>
-      <th scope="col">Email</th>
       <th scope="col">Date of Birth</th>
-      <th scope="col">National Insurance Number</th>
-      <th scope="col">Phone</th>
-      <th scope="col">Reference</th>
-      <th scope="col">Submitted</th>
+      <th scope="col">Parent's Email</th>
+      <th scope="col">Notes</th>
+
     </tr>
   </thead>
   <tbody data-testid="staff-dropboxes-list">
@@ -19,17 +16,13 @@
     <tr>
       <td scope="row">
         <a data-testid="dropbox-link" href="/dropboxes/{{this.id}}/view">
-          {{this.customer.name}}
+          {{this.customer.firstName}} {{this.customer.lastName}}
         </a>
       </td>
       <td>{{this.count}}</td>
-      <td>{{this.description}}</td>
-      <td>{{this.customer.email}}</td>
       <td>{{this.customer.dob}}</td>
-      <td>{{this.customer.nationalInsurance}}</td>
-      <td>{{this.customer.phone}}</td>
-      <td>{{this.customer.reference}}</td>
-      <td>{{dateFormat this.submitted}}</td>
+      <td>{{this.customer.parentsEmail}}</td>
+      <td>{{this.description}}</td>
     </tr>
     {{/each}}
   </tbody>
