--- a/templates/createDropbox.hbs
+++ b/templates/createDropbox.hbs
@@ -77,7 +77,7 @@
     </div>
     <div class="form-group">
       <label for="parentsEmail">Parent's email</label>
-      <input type="text" class="form-control" id="parentsEmail" name="parentsEmail" required />
+      <input type="email" class="form-control" id="parentsEmail" name="parentsEmail" required />
     </div>
 
     <div class="form-group top-border">
