--- a/templates/staffDropboxList.hbs
+++ b/templates/staffDropboxList.hbs
@@ -53,7 +53,7 @@
         {{#if this.archived}}
         <tr>
           <td scope="row">
-            <a data-testid="dropbox-link" href="/dropboxes/{{this.id}}/view">
+            <a data-testid="archived-dropbox-link" href="/dropboxes/{{this.id}}/view">
               {{this.customer.firstName}} {{this.customer.lastName}}
             </a>
           </td>
