--- a/templates/createDropbox.hbs
+++ b/templates/createDropbox.hbs
@@ -60,7 +60,7 @@
 </section>
 {{#if dropbox.hasUploads }}
 <section>
-  <h2>2. Add your details:</h2>
+  <h2>2. Add your child's details:</h2>
   <form action="" method="POST">
     <div class="form-group">
       <label for="firstName">Child’s First Name</label>
@@ -72,7 +72,7 @@
     </div>
 
     <div class="form-group">
-      <label for="dob">Date of birth</label>
+      <label for="dob">Child's date of birth</label>
       <input type="date" class="form-control" id="dob" name="dob" required />
     </div>
     <div class="form-group">
