Add hotjar, hide tracking when not prod, and use correct auth redirect

--- a/templates/createDropbox.hbs
+++ b/templates/createDropbox.hbs
@@ -1,4 +1,4 @@
-{{> header }}
+{{> header isProd }}
 <p>A secure way to send your documents to Hackney Council.</p>
 <section>
   <h2>1. Upload your documents</h2>
