--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -10,9 +10,12 @@
   <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
   <link rel="stylesheet" href="/assets/css/bootstrap-nav.min.css" />
   <link rel="shortcut icon" href="/assets/img/favicon.png" type="image/png" />
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <script src="/assets/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="/assets/js/ga.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
+  {{#if isProd }}
+    <script type="text/javascript" src="/assets/js/ga.js"></script>
+    <script type="text/javascript" src="/assets/js/hotjar.js"></script>
+  {{/if }}
 </head>
 
 <body>
