--- a/templates/readonlyDropbox.hbs
+++ b/templates/readonlyDropbox.hbs
@@ -1,35 +1,36 @@
-{{> header }}
+{{> header isProd }}
 {{#if isStaff }}
-<a href="/dropboxes" data-testid="dropbox-list-return-link">
-  << Back to all dropboxes</a> {{/if }} <div id="dropboxContents" data-testid="dropbox-details">
-    <strong>Name:</strong>
-    <p>{{ dropbox.customer.name }}</p>
-    <strong>Email:</strong>
-    <p data-testid="email-value">{{ dropbox.customer.email }}</p>
-    <strong>Date of Birth:</strong>
-    <p data-testid="dob-value">{{ dropbox.customer.dob }}</p>
-    <strong>Benefits claim reference number:</strong>
-    <p data-testid="reference-number-value">{{ dropbox.customer.reference }}</p>
-    <strong>National Insurance number:</strong>
-    <p data-testid="national-insurance-value">{{ dropbox.customer.nationalInsurance }}</p>
-    <strong>Description:</strong>
-    <p>{{ dropbox.description }}</p>
-    {{#if dropbox.hasUploads }}
+  <a href="/dropboxes" data-testid="dropbox-list-return-link">
+    << Back to all dropboxes</a> {{/if }}
+<div id="dropboxContents" data-testid="dropbox-details">
+  <strong>Name:</strong>
+  <p>{{ dropbox.customer.name }}</p>
+  <strong>Email:</strong>
+  <p data-testid="email-value">{{ dropbox.customer.email }}</p>
+  <strong>Date of Birth:</strong>
+  <p data-testid="dob-value">{{ dropbox.customer.dob }}</p>
+  <strong>Benefits claim reference number:</strong>
+  <p data-testid="reference-number-value">{{ dropbox.customer.reference }}</p>
+  <strong>National Insurance number:</strong>
+  <p data-testid="national-insurance-value">{{ dropbox.customer.nationalInsurance }}</p>
+  <strong>Description:</strong>
+  <p>{{ dropbox.description }}</p>
+  {{#if dropbox.hasUploads }}
     <strong>Uploaded Documents:</strong>
     <ol>
       {{#each dropbox.uploads }}
-      <li>
-        <a href="/dropboxes/{{../dropboxId}}/files/{{this.id}}" target="_blank">{{this.filename}}</a>
-        {{#if this.description }} - {{this.description}}{{/if }}
-      </li>
+        <li>
+          <a href="/dropboxes/{{../dropboxId}}/files/{{this.id}}" target="_blank">{{this.filename}}</a>
+          {{#if this.description }} - {{this.description}}{{/if }}
+        </li>
       {{/each}}
     </ol>
-    {{/if }}
-    </div>
-    <strong>Submitted on:</strong>
-    <p>{{dateFormat dropbox.submitted}}</p>
-    {{#if isStaff }}
-    {{#if dropbox.archived}}
+  {{/if }}
+</div>
+<strong>Submitted on:</strong>
+<p>{{dateFormat dropbox.submitted}}</p>
+{{#if isStaff }}
+  {{#if dropbox.archived}}
     <strong>
       <p data-testid="archive-status-test">Status: Archived </p>
     </strong>
@@ -37,7 +38,7 @@
       <input type="hidden" name="archiveStatus" value="" />
       <button class="btn btn-light" data-testid="unarchive-button-test">Unarchive</button>
     </form>
-    {{else}}
+  {{else}}
     <strong>
       <p data-testid="archive-status-test">Status: To review</p>
     </strong>
@@ -45,9 +46,8 @@
       <input type="hidden" name="archiveStatus" value="true" />
       <button class="btn btn-light" data-testid="archive-button-test">Move to archive</button>
     </form>
-    {{/if}}
-
-    {{else}}
-    <a href="/restart" class="btn btn-block btn-lg btn-primary" role="button" id="startAgain">Start Again</a>
-    {{/if }}
-    {{> footer isStaff }}
+  {{/if}}
+{{else}}
+  <a href="/restart" class="btn btn-block btn-lg btn-primary" role="button" id="startAgain">Start Again</a>
+{{/if }}
+{{> footer isStaff }}
