--- a/templates/readonlyDropbox.hbs
+++ b/templates/readonlyDropbox.hbs
@@ -4,7 +4,7 @@
   << Back to all dropboxes</a> {{/if }} <div id="dropboxContents" data-testid="dropbox-details">
     <strong>Child's name:</strong>
     <p>{{ dropbox.customer.firstName }} {{ dropbox.customer.lastName }}</p>
-    <strong>Date of Birth:</strong>
+    <strong>Date of birth:</strong>
     <p data-testid="dob-value">{{ dropbox.customer.dob }}</p>
     <strong>Parent's email:</strong>
     <p data-testid="parents-email-value">{{ dropbox.customer.parentsEmail }}</p>
