--- a/templates/staffDropboxList.hbs
+++ b/templates/staffDropboxList.hbs
@@ -14,9 +14,9 @@
     <table class="table table-striped">
       <thead>
         <tr>
-          <th scope="col">Child's Name</th>
-          <th scope="col">Date of Birth</th>
-          <th scope="col">Parent's Email</th>
+          <th scope="col">Child's name</th>
+          <th scope="col">Date of birth</th>
+          <th scope="col">Parent's email</th>
           <th scope="col">Notes</th>
         </tr>
       </thead>
@@ -42,9 +42,9 @@
     <table class="table table-striped">
       <thead>
         <tr>
-          <th scope="col">Child's Name</th>
-          <th scope="col">Date of Birth</th>
-          <th scope="col">Parent's Email</th>
+          <th scope="col">Child's name</th>
+          <th scope="col">Date of birth</th>
+          <th scope="col">Parent's email</th>
           <th scope="col">Notes</th>
         </tr>
       </thead>
