--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-138887970-4"></script>
+  <script type="text/javascript" src="/assets/js/ga.js"></script>
   <title>Hackney Education Uploads</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,7 +14,6 @@
   <link rel="shortcut icon" href="/assets/img/favicon.png" type="image/png" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="/assets/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="/assets/js/ga.js"></script>
 </head>
 
 <body>
