--- a/templates/createDropbox.hbs
+++ b/templates/createDropbox.hbs
@@ -65,12 +65,12 @@
     <div class="form-group">
       <label for="firstName">Child’s first name</label>
       <input type="text" class="form-control" id="firstName" name="firstName" pattern=".*\S+.*"
-        title="First name must contain at least one letter" required />
+        title="First name can not be empty" required />
     </div>
     <div class="form-group">
       <label for="lastName">Child’s last name</label>
       <input type="text" class="form-control" id="lastName" name="lastName" pattern=".*\S+.*"
-        title="Last name must contain at least one letter" required />
+        title="Last name can not be empty" required />
     </div>
 
     <div class="form-group">
