--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="/assets/js/ga.js"></script>
     <script type="text/javascript" src="/assets/js/hotjar.js"></script>
   {{/if }}
-  <title>Hackney Education Uploads</title>
+  <title>Hackney Education Document Upload</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Hackney Document Uploads">
@@ -27,4 +27,4 @@
   </div>
   <div class="container">
     <div class="col">
-      <h1>Hackney Document Upload</h1>
+      <h1>Hackney Education Document Upload</h1>
