--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -2,7 +2,12 @@
 <html lang="en">
 
 <head>
-  <title>Hackney Education Uploads</title>
+  {{#if isProd }}
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-138887970-4"></script>
+    <script type="text/javascript" src="/assets/js/ga.js"></script>
+    <script type="text/javascript" src="/assets/js/hotjar.js"></script>
+  {{/if }}
+  <title>Hackney Education Document Upload</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Hackney Document Uploads">
@@ -12,10 +17,6 @@
   <link rel="shortcut icon" href="/assets/img/favicon.png" type="image/png" />
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
-  {{#if isProd }}
-    <script type="text/javascript" src="/assets/js/ga.js"></script>
-    <script type="text/javascript" src="/assets/js/hotjar.js"></script>
-  {{/if }}
 </head>
 
 <body>
@@ -26,4 +27,4 @@
   </div>
   <div class="container">
     <div class="col">
-      <h1>Hackney Document Upload</h1>
+      <h1>Hackney Education Document Upload</h1>
