Add feedback form to header

--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -23,7 +23,7 @@
   {{> logo }}
   <div class="banner">
     <span class="banner-tag">ALPHA</span>
-    This is a new service. Tell us what you think by completing <a href="#">this feedback form</a>.
+    This is a new service. Tell us what you think by completing <a href="{{feedbackFormUrl}}">this feedback form</a>.
   </div>
   <div class="container">
     <div class="col">
