Use named params in handlebar templates

--- a/templates/createDropbox.hbs
+++ b/templates/createDropbox.hbs
@@ -1,4 +1,4 @@
-{{> header isProd feedbackFormUrl }}
+{{> header isProd=isProd feedbackFormUrl=feedbackFormUrl }}
 <p>A secure way to send your documents to Hackney Council.</p>
 <section>
   <h2>1. Upload your documents</h2>
