--- a/templates/readonlyDropbox.hbs
+++ b/templates/readonlyDropbox.hbs
@@ -1,4 +1,4 @@
-{{> header isProd feedbackFormUrl }}
+{{> header isProd=isProd feedbackFormUrl=feedbackFormUrl }}
 {{#if isStaff }}
   <a href="/dropboxes" data-testid="dropbox-list-return-link">
     << Back to all dropboxes</a> {{/if }}
