--- a/templates/staffDropboxList.hbs
+++ b/templates/staffDropboxList.hbs
@@ -1,4 +1,4 @@
-{{> header isProd feedbackFormUrl }}
+{{> header isProd=isProd feedbackFormUrl=feedbackFormUrl }}
 <h2>Customer Uploads</h2>
 <ul class="nav nav-tabs">
   <li class="active"><a href="#dropboxes-to-review" data-toggle="tab" data-testid="dropboxes-to-review-test">Dropboxes
