--- a/templates/createDropbox.hbs
+++ b/templates/createDropbox.hbs
@@ -61,6 +61,7 @@
 {{#if dropbox.hasUploads }}
   <section>
     <h2>2. Add your child's details:</h2>
+    <p>Add the details of the child you are applying for and whose application these documents support</p>
     <form action="" method="POST">
       <div class="form-group">
         <label for="firstName">Child’s first name</label>
