--- a/templates/createDropbox.hbs
+++ b/templates/createDropbox.hbs
@@ -1,42 +1,42 @@
-{{> header isProd }}
+{{> header isProd=isProd feedbackFormUrl=feedbackFormUrl }}
 <p>A secure way to send your documents to Hackney Council.</p>
 <section>
   <h2>1. Upload your documents</h2>
   <p>Upload documents one at a time, and describe what each one is.
   </p>
   {{#if dropbox.hasUploads }}
-  <h3>Your uploaded Documents:</h3>
-  <ul id="uploads">
-    {{#each dropbox.uploads }}
-    <li>
-      <div class="container">
-        <div class="row">
-          <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-xl-1">
-            {{inc @index}}.
+    <h3>Your uploaded Documents:</h3>
+    <ul id="uploads">
+      {{#each dropbox.uploads }}
+        <li>
+          <div class="container">
+            <div class="row">
+              <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-xl-1">
+                {{inc @index}}.
+              </div>
+              <div class="col-xs-8 col-sm-8 col-md-9 col-lg-9 col-xl-9">
+                <a href="/dropboxes/{{../dropboxId}}/files/{{this.id}}" target="_blank">{{this.filename}}</a>
+                {{#if this.description }} - {{this.description}}{{/if }}
+              </div>
+              <div>
+                <form method="POST" action="/dropboxes/{{ ../dropboxId }}/files/{{ this.id }}"
+                  onSubmit="javascript: return confirm('Are you sure you want to delete this document?');">
+                  <input type="hidden" name="_method" value="DELETE" />
+                  <button class="btn btn-danger">Delete</button>
+                </form>
+              </div>
+            </div>
           </div>
-          <div class="col-xs-8 col-sm-8 col-md-9 col-lg-9 col-xl-9">
-            <a href="/dropboxes/{{../dropboxId}}/files/{{this.id}}" target="_blank">{{this.filename}}</a>
-            {{#if this.description }} - {{this.description}}{{/if }}
-          </div>
-          <div>
-            <form method="POST" action="/dropboxes/{{ ../dropboxId }}/files/{{ this.id }}"
-              onSubmit="javascript: return confirm('Are you sure you want to delete this document?');">
-              <input type="hidden" name="_method" value="DELETE" />
-              <button class="btn btn-danger">Delete</button>
-            </form>
-          </div>
-        </div>
-      </div>
-    </li>
-    {{/each}}
-  </ul>
-  <hr>
-  <h3>Add another document:</h3>
+        </li>
+      {{/each}}
+    </ul>
+    <hr>
+    <h3>Add another document:</h3>
   {{/if }}
   <form action="{{ secureUploadUrl }}" method="POST" enctype="multipart/form-data">
     <div class="form-group">
       {{#each secureUploadFields}}
-      <input type="hidden" name="{{@key}}" value="{{this}}" />
+        <input type="hidden" name="{{@key}}" value="{{this}}" />
       {{/each}}
       <input type="hidden" name="key" value="{{dropboxId}}/{{secureDocumentId}}/${filename}" />
       <input type="hidden" name="X-Amz-Server-Side-Encryption" value="AES256" />
@@ -59,39 +59,38 @@
   </form>
 </section>
 {{#if dropbox.hasUploads }}
-<section>
-  <h2>2. Add your child's details:</h2>
-  <form action="" method="POST">
-    <div class="form-group">
-      <label for="firstName">Child’s first name</label>
-      <input type="text" class="form-control" id="firstName" name="firstName" pattern=".*\S+.*"
-        title="First name can not be empty" required />
-    </div>
-    <div class="form-group">
-      <label for="lastName">Child’s last name</label>
-      <input type="text" class="form-control" id="lastName" name="lastName" pattern=".*\S+.*"
-        title="Last name can not be empty" required />
-    </div>
-
-    <div class="form-group">
-      <label for="dob">Child's date of birth</label>
-      <input type="date" class="form-control" id="dob" name="dob" placeholder="dd/mm/yyyy"
-        pattern="(^(((0[1-9]|1[0-9]|2[0-8])[\/](0[1-9]|1[012]))|((29|30|31)[\/](0[13578]|1[02]))|((29|30)[\/](0[4,6,9]|11)))[\/](19|[2-9][0-9])\d\d$)|(^29[\/]02[\/](19|[2-9][0-9])(00|04|08|12|16|20|24|28|32|36|40|44|48|52|56|60|64|68|72|76|80|84|88|92|96)$)"
-        required />
-    </div>
-    <div class="form-group">
-      <label for="parentsEmail">Parent's email</label>
-      <input type="email" class="form-control" id="parentsEmail" name="parentsEmail" required />
-    </div>
-
-    <div class="form-group top-border">
-      <label for="description">Notes</label>
-      <textarea class="form-control" id="description" name="description" rows="3"></textarea>
-    </div>
-    <div class="form-group">
-      <button type="submit" id="submitDropbox" class="btn btn-block btn-lg btn-primary">Submit Documents</button>
-    </div>
-  </form>
-</section>
+  <section>
+    <h2>2. Add your child's details:</h2>
+    <p>Add the details of the child you are applying for and whose application these documents support</p>
+    <form action="" method="POST">
+      <div class="form-group">
+        <label for="firstName">Child’s first name</label>
+        <input type="text" class="form-control" id="firstName" name="firstName" pattern=".*\S+.*"
+          title="First name can not be empty" required />
+      </div>
+      <div class="form-group">
+        <label for="lastName">Child’s last name</label>
+        <input type="text" class="form-control" id="lastName" name="lastName" pattern=".*\S+.*"
+          title="Last name can not be empty" required />
+      </div>
+      <div class="form-group">
+        <label for="dob">Child's date of birth</label>
+        <input type="date" class="form-control" id="dob" name="dob" placeholder="dd/mm/yyyy"
+          pattern="(^(((0[1-9]|1[0-9]|2[0-8])[\/](0[1-9]|1[012]))|((29|30|31)[\/](0[13578]|1[02]))|((29|30)[\/](0[4,6,9]|11)))[\/](19|[2-9][0-9])\d\d$)|(^29[\/]02[\/](19|[2-9][0-9])(00|04|08|12|16|20|24|28|32|36|40|44|48|52|56|60|64|68|72|76|80|84|88|92|96)$)"
+          required />
+      </div>
+      <div class="form-group">
+        <label for="parentsEmail">Parent's email</label>
+        <input type="email" class="form-control" id="parentsEmail" name="parentsEmail" required />
+      </div>
+      <div class="form-group top-border">
+        <label for="description">Notes</label>
+        <textarea class="form-control" id="description" name="description" rows="3"></textarea>
+      </div>
+      <div class="form-group">
+        <button type="submit" id="submitDropbox" class="btn btn-block btn-lg btn-primary">Submit Documents</button>
+      </div>
+    </form>
+  </section>
 {{/if }}
 {{> footer isStaff=false }}
