--- a/templates/createDropbox.hbs
+++ b/templates/createDropbox.hbs
@@ -50,6 +50,7 @@
           <option>Other</option>
         </select>
       </div>
+      <input type="hidden" name="Content-Type" id="content-type" />
       <label for="file">Select file</label>
       <input type="file" class="form-control" id="file" name="file" required />
     </div>
@@ -57,6 +58,7 @@
       <button type="submit" id="uploadFile" class="btn btn-block btn-lg btn-primary">Upload Document</button>
     </div>
   </form>
+  <script type="text/javascript" src="/assets/js/setContentType.js"></script>
 </section>
 {{#if dropbox.hasUploads }}
   <section>
