--- a/templates/staffDropboxList.hbs
+++ b/templates/staffDropboxList.hbs
@@ -9,7 +9,7 @@
 </ul>
 <div class="tab-content">
   <div class="tab-pane active" id="dropboxes-to-review">
-    <table class="table table-striped">
+    <table id="unarchived-table" class="table table-striped">
       <thead>
         <tr>
           <th scope="col">Child's name</th>
@@ -20,24 +20,24 @@
       </thead>
       <tbody data-testid="staff-dropboxes-list">
         {{#each dropboxes}}
-          {{#unless this.archived}}
-            <tr>
-              <td scope="row">
-                <a data-testid="dropbox-link" href="/dropboxes/{{this.id}}/view">
-                  {{this.customer.firstName}} {{this.customer.lastName}}
-                </a>
-              </td>
-              <td>{{this.customer.dob}}</td>
-              <td>{{this.customer.parentsEmail}}</td>
-              <td>{{this.description}}</td>
-            </tr>
-          {{/unless}}
+        {{#unless this.archived}}
+        <tr>
+          <td scope="row">
+            <a data-testid="dropbox-link" href="/dropboxes/{{this.id}}/view">
+              {{this.customer.firstName}} {{this.customer.lastName}}
+            </a>
+          </td>
+          <td data-testid="dob">{{this.customer.dob}}</td>
+          <td>{{this.customer.parentsEmail}}</td>
+          <td>{{this.description}}</td>
+        </tr>
+        {{/unless}}
         {{/each}}
       </tbody>
     </table>
   </div>
   <div class="tab-pane" id="archived-dropboxes">
-    <table class="table table-striped">
+    <table class="table table-striped" id="archived-table">
       <thead>
         <tr>
           <th scope="col">Child's name</th>
@@ -48,22 +48,28 @@
       </thead>
       <tbody data-testid="staff-dropboxes-list">
         {{#each dropboxes}}
-          {{#if this.archived}}
-            <tr>
-              <td scope="row">
-                <a data-testid="archived-dropbox-link" href="/dropboxes/{{this.id}}/view">
-                  {{this.customer.firstName}} {{this.customer.lastName}}
-                </a>
-              </td>
-              <td>{{this.customer.dob}}</td>
-              <td>{{this.customer.parentsEmail}}</td>
-              <td>{{this.description}}</td>
-            </tr>
-          {{/if}}
+        {{#if this.archived}}
+        <tr>
+          <td scope="row">
+            <a data-testid="archived-dropbox-link" href="/dropboxes/{{this.id}}/view">
+              {{this.customer.firstName}} {{this.customer.lastName}}
+            </a>
+          </td>
+          <td data-testid="dob">{{this.customer.dob}}</td>
+          <td>{{this.customer.parentsEmail}}</td>
+          <td>{{this.description}}</td>
+        </tr>
+        {{/if}}
         {{/each}}
       </tbody>
     </table>
   </div>
 </div>
 </div>
+<script>
+  $(document).ready(function () {
+    $('#unarchived-table').DataTable();
+    $('#archived-table').DataTable();
+  });
+</script>
 {{> footer isStaff=true }}
