Add padding around the table content and remove sorting for notes

--- a/templates/staffDropboxList.hbs
+++ b/templates/staffDropboxList.hbs
@@ -68,8 +68,16 @@
 </div>
 <script>
   $(document).ready(function () {
-    $('#unarchived-table').DataTable();
-    $('#archived-table').DataTable();
+    $('#unarchived-table').DataTable({
+      "aoColumnDefs": [
+        { "bSortable": false, "aTargets": [3] },
+      ]
+    });
+    $('#archived-table').DataTable({
+      "aoColumnDefs": [
+        { "bSortable": false, "aTargets": [3] },
+      ]
+    });
   });
 </script>
 {{> footer isStaff=true }}
